Change image APIs to output binary
